Fix price wrap

--- a/src/widgets/Product/styles.css
+++ b/src/widgets/Product/styles.css
@@ -67,8 +67,8 @@
 
 .price-wrap {
   margin: 5px 0;
-  white-space: nowrap;
   line-height: inherit;
+  clear: fix;
   .simple &{
     margin: 0
   }
@@ -77,7 +77,8 @@
 .price, .compare {
   font-size: 1em;
   color: #404040;
-  display: inline-block;
+  display: block;
+  float: left;
   .simple &{
     font-weight: bold;
   }
